<resources>
    <string name="app_name">News Gateway</string>
    <string name="all">all</string>
    <string name="scienceandnature">science-and-nature</string>
    <string name="gaming">gaming</string>
    <string name="technology">technology</string>
    <string name="business">business</string>
    <string name="politics">politics</string>
    <string name="general">general</string>
    <string name="entertainment">entertainment</string>
    <string name="sport">sport</string>
    <string name="music">music</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

</resources>
